[gd_scene load_steps=10 format=2]

[ext_resource path="res://Kinematics/Enimey_1/Enimey_Hand.png" type="Texture" id=1]
[ext_resource path="res://Kinematics/Enimey_1/Enimey_Sprite.png" type="Texture" id=2]
[ext_resource path="res://Kinematics/Enimey_1/Enemiy_pistol.png" type="Texture" id=3]
[ext_resource path="res://Kinematics/Enimey_1/Enimy_Script.gd" type="Script" id=4]
[ext_resource path="res://Assets/Pixellari.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Kinematics/Enimey_1/Enimey_Damege.png" type="Texture" id=6]
[ext_resource path="res://Kinematics/Enimey_1/Extra/Enimey_Bullet.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.346, 151.273 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 5 )

[node name="Enemy" type="RigidBody2D"]
scale = Vector2( 0.85, 0.85 )
collision_layer = 32
collision_mask = 32
mode = 3
mass = 0.01
contacts_reported = 5
contact_monitor = true
can_sleep = false
script = ExtResource( 4 )
EnemyBullet = ExtResource( 7 )

[node name="Enemy_Sprite" type="Sprite" parent="."]
position = Vector2( 0, -160 )
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="Enemy_Sprite_Damaged" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -160 )
scale = Vector2( 10, 10 )
texture = ExtResource( 6 )

[node name="EnemyHand" type="Node2D" parent="."]
position = Vector2( -40, -184 )
rotation = 1.5708

[node name="Sprite2" type="Sprite" parent="EnemyHand"]
position = Vector2( 24, 0 )
rotation = -1.5708
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )

[node name="Gun" type="Node2D" parent="EnemyHand"]
position = Vector2( 48, 0 )

[node name="Sprite3" type="Sprite" parent="EnemyHand/Gun"]
position = Vector2( 15.3503, 2.00492 )
scale = Vector2( 1.5, -1.5 )
texture = ExtResource( 3 )

[node name="BulletSpawn" type="Node2D" parent="EnemyHand/Gun"]
position = Vector2( 32, 10 )

[node name="BulletPoint" type="Node2D" parent="EnemyHand/Gun"]
position = Vector2( 48, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -152 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 40.0
margin_top = -368.0
margin_right = 88.0
margin_bottom = -304.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.0235294, 0.0235294, 1 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
